2022-09-08T08:07:45Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3013465495
* notice: last 14d: unq all: 35 5213
* notice: prev accum: outdated-unq outdated-all / unq all: 966 57672 / 1042 62915
* notice: next accum: outdated-unq outdated-all / unq all: 966 57672 / 1044 62885
* notice: prev exec diff / last date diff / accum: unq all: +2 +129 -0 -159 / +2 +127 -0 -0 / 2 127
* notice: removed / changed dates: [] / [2022-08-25 2022-09-07 2022-09-08]

2022-09-08T00:33:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3011665514
* notice: last 14d: unq all: 35 5243
* notice: prev accum: outdated-unq outdated-all / unq all: 964 57312 / 1041 62503
* notice: next accum: outdated-unq outdated-all / unq all: 966 57672 / 1042 62915
* notice: prev exec diff / last date diff / accum: unq all: +1 +126 -0 -15 / +2 +359 -0 -0 / 2 359
* notice: removed / changed dates: [2022-08-24] / [2022-08-25 2022-09-07]

2022-09-07T16:06:26Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3009094067
* notice: last 14d: unq all: 35 5191
* notice: prev accum: outdated-unq outdated-all / unq all: 964 57312 / 1041 62515
* notice: next accum: outdated-unq outdated-all / unq all: 964 57312 / 1041 62503
* notice: prev exec diff / last date diff / accum: unq all: +0 +116 -0 -128 / +1 +233 -0 -0 / 1 233
* notice: removed / changed dates: [] / [2022-08-24 2022-09-07]

2022-09-07T08:10:47Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3006025773
* notice: last 14d: unq all: 35 5203
* notice: prev accum: outdated-unq outdated-all / unq all: 964 57312 / 1040 62552
* notice: next accum: outdated-unq outdated-all / unq all: 964 57312 / 1041 62515
* notice: prev exec diff / last date diff / accum: unq all: +1 +118 -0 -155 / +1 +117 -0 -0 / 1 117