@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-08T08:07:45Z",
-  "count" : 127,
-  "count_minmax" : [ 127, 127 ],
-  "count_decinc" : [ -0, +127 ],
+  "timestamp" : "2022-09-08T16:07:07Z",
+  "count" : 240,
+  "count_minmax" : [ 127, 240 ],
+  "count_decinc" : [ -0, +240 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
