@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-09-08T08:07:45Z",
+  "timestamp" : "2022-09-08T16:07:07Z",
   "count_outdated" : 57672,
   "uniques_outdated" : 966,
-  "count" : 62885,
+  "count" : 62869,
   "uniques" : 1044,
   "clones" : [
     {
       "timestamp": "2022-08-25T00:00:00Z",
-      "count": 188,
-      "count_minmax": [ 121, 362 ],
+      "count": 59,
+      "count_minmax": [ 59, 362 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     },
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-09-08T00:00:00Z",
-      "count": 127,
-      "count_minmax": [ 127, 127 ],
+      "count": 240,
+      "count_minmax": [ 127, 240 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
