@@ -1,3 +1,11 @@
+2022-09-08T16:07:07Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3016581319
+* notice: last 14d: unq all: 35 5197
+* notice: prev accum: outdated-unq outdated-all / unq all: 966 57672 / 1044 62885
+* notice: next accum: outdated-unq outdated-all / unq all: 966 57672 / 1044 62869
+* notice: prev exec diff / last date diff / accum: unq all: +0 +113 -0 -129 / +2 +240 -0 -0 / 2 240
+* notice: removed / changed dates: [] / [2022-08-25 2022-09-08]
+
 2022-09-08T08:07:45Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3013465495
 * notice: last 14d: unq all: 35 5213
